# conflict-oriented-discovery-engine

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  environment.yml  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements.txt
alembic/: env.py  script.py.mako
cleanup_reports/: legacy_cleanup_20260628_042755.json  legacy_cleanup_20260628_042755.md  legacy_cleanup_20260628_042759.json  legacy_cleanup_20260628_042759.md  legacy_cleanup_20260628_044400.json  legacy_cleanup_20260628_044400.md  legacy_code_scan.md
code_engine/: __init__.py
configs/: README.md  atlas_users.example.json  domain_routing_fallback.json
docs/: ABSTRACT_FIRST_CONFLICT_SCREENING.md  ARTIFACT_POLICY.md  BATCH_DISCOVERY_EVALUATION.md  BIOMEDICAL_ENTITY_NORMALIZATION.md  CLEANUP_POLICY.md  CODE_ATLAS_ACCOUNT_MANAGEMENT.md  CODE_ATLAS_ANNOTATION_AUDIT.md  CODE_ATLAS_BACKUP_AND_RECOVERY.md  CODE_ATLAS_DATABASE_ARCHITECTURE.md  CODE_ATLAS_DEPLOYMENT.md  CODE_ATLAS_EVALUATION_CENTER.md  CODE_ATLAS_INVITE_REGISTRATION.md  CODE_ATLAS_OWNER_ACCESS_UI.md  CODE_ATLAS_OWNER_CONTROL_CENTER.md  CODE_ATLAS_PASSWORD_AND_SESSION_SECURITY.md  CODE_ATLAS_PILOT_OPERATIONS.md  CODE_ATLAS_PUBLIC_PREVIEW_SECURITY.md  CODE_ATLAS_REVIEWER_ONBOARDING.md  CODE_REVIEW_GUIDE.md  COVERAGE_PRECHECK.md  DOMAIN_ADAPTIVE_VALIDATION.md  DOMAIN_ADAPTIVE_WORKFLOW.md  END_TO_END_WORKFLOW.md  ENTITY_RESOLUTION_HUB.md  EVIDENCE_GROUNDED_CONTEXT_ATTRIBUTION.md  EXTERNAL_VALIDATION_ANCHORS.md  FRESH_RUN_GUIDE.md  GLOBAL_INCREMENTAL_CORPUS.md  GRAPH_EXPORT_INTERFACE.md  KNOWLEDGE_STORE_MERGE.md  (+45 more)
(+1662 files in other folders)
