[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "conflict-oriented-discovery-engine"
version = "4.0.0a0"
description = "Package-oriented conflict discovery research software"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["code_engine*"]

